# cde-plasma

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
cde-plasma/: CDE-Chartreuse.colors  CDE-Classic.colors  CDE-Dark.colors  CDE-ElectricPink.colors  CMakeLists.txt  README.md  fix-sddm.sh  install.sh  uninstall.sh
cde-plasma/cde_qt_style_kf5/src/: cde_qt_style.json  cdestyle.cpp
cde-plasma/cde_qt_style_kf5_plasma5/: CMakeLists.txt  README.md
cde-plasma/cde_qt_style_kf5_plasma5/src/: cde_qt_style.json  cdestyle.cpp  plugin.cpp
cde-plasma/cde_qt_style_kf6_plasma6/: CDE.colors  CMakeLists.txt  README.md
cde-plasma/cde_qt_style_kf6_plasma6/src/: cdestyle.cpp  cdestyle.h  plugin.cpp
cde-plasma/commonality/: colors  metadata.desktop  metadata.json
cde-plasma/commonality-classic/: colors  metadata.desktop  metadata.json
cde-plasma/commonality-dark/: colors  metadata.desktop  metadata.json
cde-plasma/demo/: cde_demo.py
cde-plasma/kwin_cde_decoration_kf5/: CMakeLists.txt  README.md
cde-plasma/kwin_cde_decoration_kf5/src/: cde_kdecoration.json  cdebutton.h  cdedecoration.cpp  cdedecoration.h  cdedecorationkcm.cpp  cdedecorationkcm.h
cde-plasma/kwin_cde_decoration_kf5_plasma5/: CMakeLists.txt  README.md  cde_kdecoration.json
cde-plasma/kwin_cde_decoration_kf5_plasma5/src/: cde_kdecoration.json  cde_kdecoration_kcm.json  cdebutton.cpp  cdebutton.h  cdecommon.h  cdeconfig.h  cdedecoration.cpp  cdedecoration.h  cdedecorationkcm.cpp  cdedecorationkcm.h  plugin.cpp
cde-plasma/kwin_cde_decoration_kf6_plasma6/: CMakeLists.txt  README.md  cde_kdecoration.json
cde-plasma/kwin_cde_decoration_kf6_plasma6/src/: cde_kdecoration_kcm.json  cdebutton.cpp  cdeconfig.h  cdedecoration.cpp  cdedecorationkcm.cpp  cdedecorationkcm.h  plugin.cpp
cde-plasma/lockscreen/: LockScreenUi.qml
cde-plasma/look-and-feel/org.kde.cde-dark.desktop/: metadata.json
cde-plasma/look-and-feel/org.kde.cde-dark.desktop/contents/: defaults
cde-plasma/look-and-feel/org.kde.cde-dark.desktop/contents/lockscreen/: LockScreen.qml
cde-plasma/look-and-feel/org.kde.cde.desktop/: metadata.json
cde-plasma/look-and-feel/org.kde.cde.desktop/contents/: defaults
cde-plasma/look-and-feel/org.kde.cde.desktop/contents/lockscreen/: LockScreen.qml  LockScreenUi.qml
cde-plasma/look-and-feel/org.kde.cde.desktop/contents/logout/: Logout.qml
cde-plasma/look-and-feel/org.kde.cde.desktop/contents/splash/: Splash.qml
cde-plasma/packaging/: build-arch.sh  build-debian.sh  build-fedora.sh
cde-plasma/packaging/arch/: PKGBUILD  cde-plasma.install
cde-plasma/packaging/debian/: changelog  control  copyright  postinst  rules
cde-plasma/packaging/debian-plasma5/: cde-plasma.NEWS  control  rules
cde-plasma/packaging/fedora/: cde-plasma.spec
cde-plasma/scripts/: cde-plasma-apply  cde-plasma-mode  cde-plasma-unapply  make-prebuilt.sh
cde-plasma/sddm-cde/: Main.qml  metadata.desktop  sddm-cde-theme.conf  theme.conf
